# listo_rs

./: .gitignore  Cargo.toml  README.md  jsconfig.json  package.json  tsconfig.json  vite.config.js
assets/css/: listo-list.css  listo-new-list.css  registrations.css  style.css  variables.css
assets/js/: listo-family.js  listo-list.js  listo-new-family.js  listo-new-list.js  listo-registration.js
locales/en/: login.ftl  main.ftl
locales/ja/: login.ftl  main.ftl
pki-validation/: A4104E740827804150969588F5B25695.txt  BEE616C8730EB9ED91019B8EEFD8ECB1.txt
src/: auth.rs  cookie_tools.rs  families.rs  images.rs  lib.rs  lists.rs  main.rs  test_utils.rs  user.rs  users.rs  views.rs  ws.rs
src/assets/: home.html
src/auth/: auth_service.rs  token_guard.rs  token_reader.rs
src/families/: guard.rs  model.rs
src/lists/: guard.rs  model.rs
src/views/: base.html  i18n.rs  lists.html  upload.html
src/views/i18n/: language_identifier.rs
src/views/templates/: base.html  families.html  lists.html  login.html
src/views/templates/components/: listo-list.html  navbar.html
wc/: fluent.ts  listo-list.ts  listo-lists-manager.ts
