[package]
name = "listo_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
axum = { version = "0.6.20", features = ["multipart", "ws"]}
cookie = "0.18.0"
futures = "0.3.28"
http = "0.2.9"
jsonwebtoken = "9.1.0"
mysql_async = "0.32.2"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.108"
tera = "1.19.1"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs"] }
validator = { version = "0.16.1", features = ["derive"] }
