[package]
name = "listo_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
axum = { version = "0.6.20", features = ["multipart", "ws"]}
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
cookie = "0.18.0"
fluent = "0.16.0"
http = "0.2.9"
intl-memoizer = "0.5.1"
jsonwebtoken = "9.1.0"
mysql_async = "0.32.2"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.108"
tera = "1.19.1"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs", "compression-gzip"] }
unic-langid = { version = "0.9.1", features = ["unic-langid-macros"] }
url = "2.4.1"
uuid = "1.5.0"
validator = { version = "0.16.1", features = ["derive"] }
webauthn-rs = { version = "0.4.8", features = ["danger-allow-state-serialisation"] }
